feat: detach 적용
- detachToSignUpRIB

--- a/Woofriend/RIBs/LoggedOut/LoggedOutViewController.storyboard
+++ b/Woofriend/RIBs/LoggedOut/LoggedOutViewController.storyboard
@@ -64,7 +64,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="k0X-am-vwV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="244" y="205"/>
+            <point key="canvasLocation" x="1143.9252336448596" y="204.75161987041039"/>
         </scene>
     </scenes>
     <resources>
