--- a/Woofriend/RIBs/SignUp/Cell/PhotoAddCell.xib
+++ b/Woofriend/RIBs/SignUp/Cell/PhotoAddCell.xib
@@ -10,17 +10,22 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="PhotoAddCell" id="gTV-IL-0wX" customClass="PhotoAddCell" customModule="Woofriend" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="280" height="295"/>
+            <rect key="frame" x="0.0" y="0.0" width="233" height="276"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="280" height="295"/>
+                <rect key="frame" x="0.0" y="0.0" width="233" height="276"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mmK-Fu-UQL">
-                        <rect key="frame" x="0.0" y="7" width="276" height="288"/>
+                        <rect key="frame" x="0.0" y="7" width="229" height="269"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                <real key="value" value="8"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
                     </imageView>
                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7cu-Qb-jR1">
-                        <rect key="frame" x="220" y="0.0" width="60" height="60"/>
+                        <rect key="frame" x="173" y="0.0" width="60" height="60"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="60" id="HFi-pj-3Dp"/>
                             <constraint firstAttribute="width" constant="60" id="hJS-DR-AuN"/>
@@ -38,12 +43,12 @@
                 <constraint firstAttribute="trailing" secondItem="7cu-Qb-jR1" secondAttribute="trailing" id="jgI-Fb-wW1"/>
                 <constraint firstItem="7cu-Qb-jR1" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="nc6-Hm-edD"/>
             </constraints>
-            <size key="customSize" width="280" height="295"/>
+            <size key="customSize" width="233" height="276"/>
             <connections>
                 <outlet property="addImageView" destination="mmK-Fu-UQL" id="GlP-YQ-zVk"/>
                 <outlet property="deleteButton" destination="7cu-Qb-jR1" id="Hf1-K9-u0D"/>
             </connections>
-            <point key="canvasLocation" x="20.289855072463769" y="60.602678571428569"/>
+            <point key="canvasLocation" x="-13.768115942028986" y="54.241071428571423"/>
         </collectionViewCell>
     </objects>
     <resources>
